# Algorithms

./: CMakeLists.txt  README.md  main.cpp
include/: includes.h
include/ConvexHullHeader/: convexHull.h
include/GraphHeader/: wgraphList.h
include/PatternMatchHeader/: patternMatch.h
include/TestHeader/: test.h
src/ConvexHull/: convexHull.cpp
src/Graph/: wgraphList.cpp
src/PatternMatching/: PatternMatch.cpp
src/Tests/: convexHullTests.json  patternMatchingTests.json  test.cpp  testMaxFlow.json  testSSSPBellmanFord.json  testSSSPDAG.json  testSSSPDijkstra.json
